<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_casa" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/introduzca_el_nombre_de_su_casa_ylos_datos_requeridos"
                android:textColor="@color/browser_actions_bg_grey"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion">

            <EditText
                android:id="@+id/casaId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fff"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="153dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/LinearId">

                <ImageView
                    android:id="@+id/iconPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/ic_telefono" />

                <EditText
                    android:id="@+id/numTelf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#fff"
                    android:ems="10"
                    android:inputType="phone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                tools:layout_editor_absoluteY="257dp">

                <ImageView
                    android:id="@+id/iconSex"
                    android:layout_width="34dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="ptodo"
                    android:paddingEnd="2dp"
                    android:paddingRight="2dp"
                    app:srcCompat="@drawable/sexo" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Masculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/maculino"
                        android:textColor="@color/browser_actions_bg_grey" />

                    <RadioButton
                        android:id="@+id/Femenino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/femenino"
                        android:textColor="@color/browser_actions_bg_grey" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearEjercicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/LinearSexo">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.3"
                    app:srcCompat="@drawable/ejercicio" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:paddingBottom="10dp">

                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:isScrollContainer="false"
                        android:max="4"
                        android:progress="1" />

                    <TextView
                        android:id="@+id/TextoEjer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:text="@string/nivel_de_ejercicio1"
                        android:textColor="@color/common_google_signin_btn_text_dark_default" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <Button
                android:id="@+id/enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/boton_introduction"
                android:paddingLeft="64dp"
                android:paddingRight="64dp"
                android:text="@string/enviar"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintBottom_toTopOf="@+id/protecDatos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/protecDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="leerDatos"
                android:padding="10dp"
                android:text="@string/protecci_n_de_datos_todos_sus_datos_son_de_acceso_privado_y_estan_bajo_la_regulaci_n_vigente"
                android:textColor="@color/browser_actions_bg_grey"
                android:textSize="10sp"
                tools:layout_editor_absoluteY="175dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>