<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fotoUsuario"
                    android:layout_width="146dp"
                    android:layout_height="125dp"
                    android:layout_weight="1"
                    android:src="@drawable/manolo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:gravity="fill_vertical|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nombreUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:text="@string/usuario"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:layout_marginStart="60dp" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="0"
                    android:background="@drawable/contenedor_rnd"
                    android:onClick="editarFoto"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:src="@drawable/ic_editar_foto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/contenedor_rnd"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iconEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:contentDescription="@string/asd"
                            app:srcCompat="@drawable/ic_email" />

                        <TextView
                            android:id="@+id/correoUsuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:text="correoDelUsuario"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iconPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            app:srcCompat="@drawable/ic_telefono" />

                        <TextView
                            android:id="@+id/textoTel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:text="Telefono"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/iconSex"
                            android:layout_width="34dp"
                            android:layout_height="46dp"
                            android:layout_marginLeft="40dp"
                            android:contentDescription="ptodo"
                            android:paddingEnd="2dp"
                            android:paddingRight="2dp"
                            app:srcCompat="@drawable/sexo" />

                        <TextView
                            android:id="@+id/sexo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="Sexo"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:contentDescription="TODO"
                            android:onClick="showDatePickerDialog"
                            android:paddingStart="40dp"
                            app:srcCompat="@drawable/ic_calendario" />

                        <EditText
                            android:id="@+id/editfecha"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:focusable="false"
                            android:inputType="date" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingLeft="35dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ejercicio" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <SeekBar
                                android:id="@+id/seekBar"
                                style="@style/Widget.AppCompat.SeekBar.Discrete"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:isScrollContainer="false"
                                android:max="4"
                                android:progress="1" />

                            <TextView
                                android:id="@+id/TextoEjer"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="6"
                                android:text="@string/nivel_de_ejercicio2"
                                android:textColor="@color/browser_actions_text_color" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/guardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_button_bg"
                    android:text="@string/guardar" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
